bk_ida/gccida/c3/move_for_stack_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1526:4: error: expected ';' after expression
rtx i; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1526:5: error: use of undeclared identifier 'i'
rtx i; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1530:4: error: expected ';' after expression
rtx v9; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1530:5: error: use of undeclared identifier 'v9'
rtx v9; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1533:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1533:5: error: use of undeclared identifier 'v12'; did you mean 'v10'?
rtx v12; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1531:5: note: 'v10' declared here
int v10; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1545:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1545:5: error: use of undeclared identifier 'regno_note'
rtx regno_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1559:8: error: use of undeclared identifier 'v38'
rtx ( *v38)[59]; // rcx 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1566:7: error: use of undeclared identifier 'i'
for ( i = pat + 1; ; i = ( rtx)( v6 + 2) ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1566:32: error: called object type 'rtx' (aka 'struct rtx_def *') is not a function or function pointer
for ( i = pat + 1; ; i = ( rtx)( v6 + 2) ) 
                         ~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1566:22: error: use of undeclared identifier 'i'
for ( i = pat + 1; ; i = ( rtx)( v6 + 2) ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1568:16: error: use of undeclared identifier 'i'
v6 = *( int **)i; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1569:20: error: use of undeclared identifier 'i'
v7 = **( _DWORD **)i; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1582:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *v8), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1582:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *v8), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1584:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v7))] 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1586:13: error: use of undeclared identifier 'i'
*( _QWORD *)i = v6; 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/reg-stack.c:1592:1: error: use of undeclared identifier 'v9'
v9 = rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_for_stack_reg/src/obj/reg-stack.o] Error 1
